# Core

./: LICENSE  Makefile  README.rst  pyproject.toml
Django-Core/project/: settings.py
